# agentic-ai-devops-labs

./: .gitignore  README.md
agentic-ai-build-concepts/: README.md  devops-ai-skill-build.md
agentic-ai-build-concepts/Agent-Skills/: Readme.md
agentic-ai-build-concepts/Agentic-AI-Tools/: Readme.md
agentic-ai-build-concepts/Autogen-framework/: readme.md
agentic-ai-build-concepts/LangGraph-Framework/: readme.md
agentic-ai-build-concepts/MCP/: readme.md
agentic-ai-build-concepts/N8N/: readme.md
agentic-ai-build-concepts/RAG/: readme.md
ai-agent-projects/devops-ai-agents/crewai-release-readiness-crew/: README.md
ai-agent-projects/devops-ai-agents/langgraph-change-approval-and-rollback-orchestrator/: README.md
ai-agent-projects/devops-ai-agents/langgraph-pr-and-ticket-review-readiness-agent/: README.md
ai-agent-projects/devops-ai-agents/mcp-devops-context-server/: README.md
ai-agent-projects/devops-ai-agents/n8n-devops-escalation-pipeline/: README.md
ai-agent-projects/multi-ai-agent/: readme.md
ai-agent-projects/multi-ai-agent/autogen-devops-war-room/: .env.example  README.md  pyproject.toml
ai-agent-projects/multi-ai-agent/autogen-devops-war-room/samples/: devops-war-room-prompt.md
ai-agent-projects/multi-ai-agent/autogen-devops-war-room/src/autogen_devops_war_room/: __init__.py  cli.py  config.py  team.py
ai-agent-projects/multi-ai-agent/autogen-devops-war-room/tests/: test_config.py
ai-agent-projects/multi-ai-agent/ci-failure-triage-agent/tests/: test_analyzer.py
ai-agent-projects/multi-ai-agent/creative-advertising-ai-agent-team/: README.md  pyproject.toml
ai-agent-projects/multi-ai-agent/creative-advertising-ai-agent-team/samples/: bali-launch-output.json  bali-launch-summary.md
ai-agent-projects/multi-ai-agent/creative-advertising-ai-agent-team/src/creative_advertising_ai_agent_team/: __init__.py  agent.py  cli.py  models.py
ai-agent-projects/multi-ai-agent/creative-advertising-ai-agent-team/tests/: test_agent.py
ai-agent-projects/multi-ai-agent/guardrailed-tool-handoff-agent/: README.md  pyproject.toml
ai-agent-projects/multi-ai-agent/guardrailed-tool-handoff-agent/samples/: tesla-sentiment-example.md
ai-agent-projects/multi-ai-agent/guardrailed-tool-handoff-agent/src/guardrailed_tool_use_agent/: __init__.py  agent.py  cli.py  models.py  tools.py
ai-agent-projects/multi-ai-agent/guardrailed-tool-handoff-agent/tests/: test_agent.py
ai-agent-projects/multi-ai-agent/langgraph-incident-command-graph/: .env.example  README.md  graph.mmd  pyproject.toml
ai-agent-projects/multi-ai-agent/langgraph-incident-command-graph/src/langgraph_incident_command_graph/: __init__.py  cli.py  graph.py  models.py  tools.py
ai-agent-projects/multi-ai-agent/langgraph-incident-command-graph/tests/: test_graph.py
ai-agent-projects/single-agents/ai-agent-leverage-tool/: .env.example  README.md  pyproject.toml
ai-agent-projects/single-agents/ai-agent-leverage-tool/src/ai_agent_leverage_tool/: __init__.py  models.py
ai-agent-projects/single-agents/ai-agent-leverage-tool/tests/: test_agent.py
ai-agent-projects/single-agents/stateful-AI-agent/: .env.example  README.md
ai-agent-projects/single-agents/stateless-AI-Agent/: Readme.md
ai-tools-skills/Autogen-framework/: readme.md
projects/: README.md
projects/No-memory-AI-Agent/: Readme.md
projects/SINGLE-AGENT/stateful-AI-agent/: pyproject.toml
projects/SINGLE-AGENT/stateful-AI-agent/data/: session.db
projects/SINGLE-AGENT/stateful-AI-agent/src/stateful_ai_agent/: agent.py
projects/SINGLE-AGENT/stateful-AI-agent/tests/: test_agent.py
projects/multi-ai-agent/: readme.md
projects/multi-ai-agent/ci-failure-triage-agent/: README.md  pyproject.toml
projects/multi-ai-agent/ci-failure-triage-agent/src/ci_failure_triage_agent/: models.py
skills/: README.md  terminologies.md
skills/Autogen-framework/: readme.md
skills/CrewAI-FrameWork/: readme.md
skills/LangGraph-Framework/: readme.md
skills/MCP/: readme.md
skills/RAG/: readme.md
skills/devops/: ci-cd-pipelines.md  docker-containerization.md  documentation-architecture.md  kubernetes-deployment.md  security-compliance.md  terraform-iac.md
(+11 files in other folders)
