[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "langgraph-incident-command-graph"
version = "0.1.0"
description = "DevOps-focused LangGraph multi-agent scaffold with multiple tools and conditional routing."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2.56",
    "langchain-core>=0.3.24",
    "langchain-openai>=0.2.14",
    "python-dotenv>=1.0.0",
    "pydantic>=2.12.0",
    "requests>=2.31.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
