[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-agent-leverage-tool"
version = "0.1.0"
description = "Single-agent scaffold for external Tavily search and OpenAI built-in tools."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai-agents>=0.13.6",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "pydantic>=2.12.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
